[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ena-submission-toolkit"
version = "0.1.0"
description = "Build and submit ENA records (studies, samples) from structured/DataHarmonizer-exported data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Tim Rozday", email = "tim.rozday@gmail.com" }]
keywords = ["ena", "webin", "ebi", "bioinformatics", "submission", "linkml", "dataharmonizer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "ena-api-client @ git+https://github.com/timrozday-mgnify/ena-api-client.git",
    "linkml-lib @ git+https://github.com/timrozday-mgnify/linkml-lib.git",
    "httpx>=0.27",
    "lxml>=5.0",
    "pendulum>=3.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[project.scripts]
ena-submission-toolkit = "ena_submission_toolkit.cli:app"

[project.urls]
Homepage = "https://github.com/timrozday-mgnify/ena-submission-toolkit"
Issues = "https://github.com/timrozday-mgnify/ena-submission-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ena_submission_toolkit = ["assets/ena_schema/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
